@@ -1,12 +1,12 @@
 package com.gtocore.common.machine.monitor;
 
-import com.gtocore.common.network.ServerMessage;
 import com.gtocore.config.GTOConfig;
+
+import com.gtolib.api.network.NetworkPack;
 
 import com.gregtechceu.gtceu.api.block.MetaMachineBlock;
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
 import com.gregtechceu.gtceu.api.machine.MetaMachine;
-import com.gregtechceu.gtceu.utils.collection.OpenCacheHashSet;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
@@ -29,6 +29,8 @@ import net.minecraftforge.event.server.ServerStoppedEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
 
+import com.fast.fastcollection.OpenCacheHashSet;
+import lombok.Getter;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -46,11 +48,26 @@ import static com.gtocore.client.renderer.machine.MonitorRenderer.gridToNetworkC
 public final class Manager {
 
     private static final Queue<Runnable> Loading = new LinkedList<>();
-    static final Map<GridFacedPoint, GridNetwork> gridToNetwork = new ConcurrentHashMap<>();
+    private static final Map<GridFacedPoint, GridNetwork> gridToNetwork = new ConcurrentHashMap<>();
+
+    private static final NetworkPack MONITOR_CHANGED = NetworkPack.registerS2C("monitorUpdateC2S", (p, buf) -> {
+        CompoundTag tag = new CompoundTag();
+        AtomicInteger i = new AtomicInteger(0);
+        gridToNetwork.values().forEach(network -> {
+            CompoundTag networkTag = network.serializeNBT();
+            tag.put(String.valueOf(i.getAndIncrement()), networkTag);
+        });
+        buf.writeNbt(tag);
+    }, (p, b) -> {
+        var monitorData = b.readNbt();
+        if (monitorData != null && p.level().isClientSide) {
+            Manager.onClientReceived(monitorData);
+        }
+    });
 
     private Manager() {}
 
-    static void requireQueue(Runnable runnable) {
+    private static void requireQueue(Runnable runnable) {
         if (!Loading.contains(runnable)) {
             Loading.add(runnable);
         }
@@ -62,8 +79,8 @@ public final class Manager {
         }
     }
 
-    public static void addBlock(MetaMachine be) {
-        addBlock(be.getBlockState(), be.getPos(), be.getLevel());
+    static void addBlock(MetaMachine be) {
+        addBlock(be.getBlockState(), be.getPos(), be.getLevel(), be.isPainted() ? be.getPaintingColor() : -1);
     }
 
     public static Direction getFrontFacing(BlockState state) {
@@ -75,7 +92,7 @@ public final class Manager {
         }
     }
 
-    public static void addBlock(BlockState blockState, BlockPos pos, @Nullable Level level, int color) {
+    static void addBlock(BlockState blockState, BlockPos pos, @Nullable Level level, int color) {
         if (level == null || level.isClientSide() || !level.isLoaded(pos)) {
             return;
         }
@@ -90,11 +107,11 @@ public final class Manager {
         });
     }
 
-    public static void addBlock(BlockState blockState, BlockPos pos, @Nullable Level level) {
+    static void addBlock(BlockState blockState, BlockPos pos, @Nullable Level level) {
         addBlock(blockState, pos, level, -1);
     }
 
-    public static void removeBlock(BlockState pState, BlockPos pPos, @Nullable Level pLevel) {
+    static void removeBlock(BlockState pState, BlockPos pPos, @Nullable Level pLevel) {
         if (pLevel != null && !pLevel.isClientSide) {
             requireQueue(() -> {
                 Direction facing = getFrontFacing(pState);
@@ -115,7 +132,7 @@ public final class Manager {
         }
     }
 
-    public static void removeBlock(MetaMachine be) {
+    static void removeBlock(MetaMachine be) {
         if (be.getLevel() != null && !be.getLevel().isClientSide()) {
             removeBlock(be.getBlockState(), be.getPos(), be.getLevel());
         }
@@ -146,7 +163,7 @@ public final class Manager {
     /**
      * 网格方向类，包含了方向、维度和第三个值（通常是X、Y或Z坐标）。
      * 这三个值可以确定网格所在的平面
-     * 
+     *
      * @param facing        网格的方向（法向量）
      * @param level         网格所在的维度
      * @param theThirdValue 网格所在平面上的第三个值（通常是X、Y或Z坐标）
@@ -203,7 +220,7 @@ public final class Manager {
 
     /**
      * 网格点类，包含了网格方向、X坐标和Y坐标。
-     * 
+     *
      * @param facing 网格的方向（法向量）
      * @param x      网格点的X坐标
      * @param y      网格点的Y坐标
@@ -262,7 +279,7 @@ public final class Manager {
             this.facing = facing;
         }
 
-        public static GridNetwork fromBlock(Direction facing, BlockPos pos, ResourceKey<Level> level, int color) {
+        static GridNetwork fromBlock(Direction facing, BlockPos pos, ResourceKey<Level> level, int color) {
             GridFacing axis = GridFacing.of(facing, level, GridFacing.getThirdValue(facing, pos));
             var point = axis.getPoint(pos);
             if (gridToNetwork.containsKey(point)) {
@@ -281,7 +298,7 @@ public final class Manager {
             return points;
         }
 
-        public static GridNetwork createSingleBlockNetwork(Direction facing, BlockPos pos, ResourceKey<Level> level, int color) {
+        static GridNetwork createSingleBlockNetwork(Direction facing, BlockPos pos, ResourceKey<Level> level, int color) {
             GridFacing axis = GridFacing.of(facing, level, GridFacing.getThirdValue(facing, pos));
             var point = axis.getPoint(pos);
             if (gridToNetwork.containsKey(point)) {
@@ -387,7 +404,7 @@ public final class Manager {
             if (shiftedPoints.isEmpty()) {
                 return false;
             } else {
-                var otherNetwork = gridToNetwork.get(shiftedPoints.get(0));
+                var otherNetwork = gridToNetwork.get(shiftedPoints.getFirst());
                 boolean canMerge = shiftedPoints.stream()
                         .allMatch(newPoint -> gridToNetwork.get(newPoint) == otherNetwork) &&
                         canMerge(otherNetwork, direction);
@@ -449,7 +466,7 @@ public final class Manager {
          * 若该点是边界点，则会导致网格被切割成三个小矩形，若为角点，则会导致网格被切割成两个小矩形。
          * 情况是有限的，且最多生成四个新矩形，采取枚举的方式处理。
          * 3. 如果新生成的矩形能向外与其他矩形合并，则会尝试合并。
-         * 
+         *
          * @param point 要删除的点
          */
         private void split(GridFacedPoint point) {
@@ -594,7 +611,7 @@ public final class Manager {
     }
 
     /// 这个将会被客户端所用到！！！
-    public static void updateAllNetworkDisplayMachines(Level level) {
+    static void updateAllNetworkDisplayMachines(Level level) {
         if (level == null) return;
         gridToNetworkCLIENT.values().forEach(network -> network.refreshDisplayingMachine(level));
     }
@@ -683,21 +700,13 @@ public final class Manager {
         }
     }
 
-    public static void broadcast(MinecraftServer server) {
+    private static void broadcast(MinecraftServer server) {
         // check if runtime is in dedicated server mode
-        ServerMessage.send(server, null, "monitorChanged", buf -> {
-            CompoundTag tag = new CompoundTag();
-            AtomicInteger i = new AtomicInteger(0);
-            gridToNetwork.values().forEach(network -> {
-                CompoundTag networkTag = network.serializeNBT();
-                tag.put(String.valueOf(i.getAndIncrement()), networkTag);
-            });
-            buf.writeNbt(tag);
-        });
+        MONITOR_CHANGED.send(server);
     }
 
     @OnlyIn(Dist.CLIENT)
-    public static void onClientReceived(CompoundTag tag) {
+    private static void onClientReceived(CompoundTag tag) {
         gridToNetworkCLIENT.clear();
         for (String key : tag.getAllKeys()) {
             CompoundTag networkTag = tag.getCompound(key);
@@ -708,6 +717,7 @@ public final class Manager {
         }
     }
 
+    @Getter
     public enum MonitorCTM {
 
         NONE, // 四面均无连接
@@ -732,8 +742,8 @@ public final class Manager {
         private final int v;
 
         MonitorCTM() {
-            this.u = ordinal() % 4 * 16; // 每个纹理占16个像素
-            this.v = ordinal() / 4 * 16; // 每四个纹理一行
+            this.u = ordinal() % 4 << 4; // 每个纹理占16个像素
+            this.v = ordinal() / 4 << 4; // 每四个纹理一行
         }
 
         @NotNull
@@ -810,14 +820,6 @@ public final class Manager {
             if (x == toX) return RIGHT;
             // 中心
             return CENTER;
-        }
-
-        public int getV() {
-            return v;
-        }
-
-        public int getU() {
-            return u;
         }
     }
 }
